--- a/blogs/Do-this-IMMEDIATELY-if-you-believe-someone-has-hacked-into-your-personal-email-account.html
+++ b/blogs/Do-this-IMMEDIATELY-if-you-believe-someone-has-hacked-into-your-personal-email-account.html
@@ -65,7 +65,8 @@ body {
 
 <font size="5" color="yellow">  ~ <font size="5" color="white">Don't panic</font></font> <br>
 
-<font size="5" color="yellow">  ~ <font size="5" color="white">Log into your email 3. Force logout of all active sessions</font></font> <br>
+<font size="5" color="yellow">  ~ <font size="5" color="white">Log into your email </font></font> <br>
+<font size="5" color="yellow">  ~ <font size="5" color="white">Force logout of all active sessions</font></font> <br>
 
 <font size="5" color="yellow">  ~ <font size="5" color="white">Change your password</font></font> <br>
 
