--- a/blogs/CyberSecurity-Tips.html
+++ b/blogs/CyberSecurity-Tips.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Search engines for pentesters</title>
+   <title>Cyber Security Tips For Begineers.</title>
   <link rel="shortcut icon" href="../img/terminal.jpeg"  type="image/x-icon">
 </head>
 <style>
@@ -61,7 +61,7 @@ body {
 
 <p style="font-size:25px;">revanthcs@system:~$  <font color="#E0E0E0"> cd readblog</font></p>
 
-<p style="font-size:25px;"> <font color="#E0E0E0"> Search engines for pentesters</font></p>
+<p style="font-size:25px;"> <font color="#E0E0E0"> Cyber Security Tips For Begineers. <font></p>
 
 <font size="5" >1 Server</font><br><br>
 <font size="5" color="yellow">  ~<font size="5" color="white"> shodan.io </font></font> <br>
