--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,10 @@ body {
 <font color="white"> Blogs:<br> <br>
 </font>
 </div>
-
+   <hr class="theTop">
+   <hr class="theTop">
+   <h2><a href="./blogs/CyberSecurity-Tips.html" target="_blank"> <font size="4" color="red">Cyber Security Tips For Begineers.</font> <span class="cursor">New</span> <br> <font size="4" color="yellow">Read blog </font> <font size="4" color="blue"> | 18 Feb 23 </font></a> </h2>
+  
    <hr class="theTop">
    <hr class="theTop">
    <h2><a href="./blogs/Search-engines-for-pentesters.html" target="_blank"> <font size="4" color="red">Search engines for pentesters</font> <span class="cursor">New</span> <br> <font size="4" color="yellow">Read blog </font> <font size="4" color="blue"> | 24 Nov 22 </font></a> </h2>
