--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<meta http-equiv="Refresh" content="0; url='./whoisrevanth.html'" />
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>GIF Image Redirect</title>
+    <style>
+      #gif-wrapper {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
+  </head>
+  <body style="background-color: black;">
+    <div id="gif-wrapper">
+      <img src="C:\Users\valla\Downloads\revanth (1).gif" alt="GIF Image" width="400" height="200">
+    </div>
+    <script>
+      setTimeout(function() {
+        window.location.href = "'./whoisrevanth.html'";
+      }, 5000); // Redirects after 5 seconds (5000ms)
+    </script>
+  </body>
+</html>
