--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <script>
       setTimeout(function() {
-        window.location.href = "'./whoisrevanth.html'";
+        window.location.href = "./whoisrevanth.html";
       }, 5000); // Redirects after 5 seconds (5000ms)
     </script>
   </body>
