--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body style="background-color: black;">
     <div id="gif-wrapper">
-      <img src="C:\Users\valla\Downloads\revanth (1).gif" alt="GIF Image" width="400" height="200">
+      <img src="./img/revanth.gif" alt="GIF Image" width="400" height="200">
     </div>
     <script>
       setTimeout(function() {
