--- a/about.html
+++ b/about.html
@@ -53,11 +53,11 @@ body {
 <body style="background-color:black">
 
 <!-- Name -->
-<p style="font-size:40px;"><a href="./whoisrevanth.html"><font size="40px" color="#00fe0a">Revanth ChandraShekar</font></a></p>
+<p style="font-size:40px;"><a href="./index.html"><font size="40px" color="#00fe0a">Revanth ChandraShekar</font></a></p>
 
 <!-- menu -->
 
-<h3><a href="./whoisrevanth.html">Home</a> <font color="white"> | </font><a href="./about.html">AboutMe</a> <font color="white"> | </font> <a href="./contact.html">Contact</a> <font color="white"> | </font> <a href="./blog.html">Blog</a> <font color="white"> | </font> <a href="./books.html">Books</a> </h3>
+<h3><a href="./index.html">Home</a> <font color="white"> | </font><a href="./about.html">AboutMe</a> <font color="white"> | </font> <a href="./contact.html">Contact</a> <font color="white"> | </font> <a href="./blog.html">Blog</a> <font color="white"> | </font> <a href="./books.html">Books</a> </h3>
 
 <!-- Aboutme -->
 
