--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GIF Image Redirect</title>
+    <title>Whoami:RevanthCS</title>
     <style>
       #gif-wrapper {
         position: absolute;
@@ -13,7 +13,7 @@
   </head>
   <body style="background-color: black;">
     <div id="gif-wrapper">
-      <img src="./img/revanth.gif" alt="GIF Image" width="400" height="200">
+      <img src="./img/revanth.gif" alt="GIF Image" width="600" height="300">
     </div>
     <script>
       setTimeout(function() {
